Update to use github API to grab repository details

--- a/CONFIG-SAMPLE.json
+++ b/CONFIG-SAMPLE.json
@@ -2,8 +2,10 @@
     "github-roster": "classroom_roster_COMP2200.csv",
     "github-id-pattern": "\\d+",
     "key-field": "id",
+    "github-token": "github token from https://github.com/settings/tokens",
     "ilearn-csv": "COMP2200_SHFYR_2021_ALL_Uwith COMP6200 Co-badged Grades-20210731_0912-comma_separated.csv",
-    "classroom": "git@github.com:MQCOMP2200-S2-2021",
+    "github-repos-csv": "mqcomp2200-weekly-repos.csv",
+    "organisation": "MQCOMP2200-S2-2021",
     "assignment": "practicals-week-1",
     "outdir": "submissions-2200",
     "workshops": [],
