--- a/CONFIG-SAMPLE.json
+++ b/CONFIG-SAMPLE.json
@@ -1,13 +1,8 @@
 {
-    "github-roster": "classroom_roster_COMP2200.csv",
-    "github-id-pattern": "\\d+",
-    "key-field": "id",
-    "github-token": "github token from https://github.com/settings/tokens",
+    "github-grades": "grades.csv",
+    "roster-csv": "classroom_roster.csv",
     "ilearn-csv": "COMP2200_SHFYR_2021_ALL_Uwith COMP6200 Co-badged Grades-20210731_0912-comma_separated.csv",
-    "github-repos-csv": "mqcomp2200-weekly-repos.csv",
-    "organisation": "MQCOMP2200-S2-2021",
-    "assignment": "practicals-week-1",
-    "outdir": "submissions-2200",
-    "workshops": [],
-    "nbconvert": 0
+    "key-field": "email",
+    "outdir": "weekly-workshops",
+    "workshops": []
 }
